--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 	<script src="bower_components/firebase/firebase.js"></script>
+	<script src="bower_components/angularfire/dist/angularfire.js"></script>
 	
 	
 	<script src="app/config/init.js"></script>
